2008-06-04  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py: fixed print of unencoded characters to
	console, when reporting conflicts after a checkout.

2008-06-03  James Sharpe <jsharpe@svn.gnome.org>

	* jhbuild/versioncontrol/git.py: Fixed _get_externals to handle
	deleted svn:externals correctly.
	
2008-06-03  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-suites-2.22.modules: libgnomeui branched for 2.22.

2008-06-02  Luis Medinas  <lmedinas@svn.gnome.org>

	* modulesets/gnome-2.24.modules: Remove n-c-b dependecy
	from Brasero.

2008-06-02  Emmanuele Bassi  <ebassi@gnome.org>

	* modulesets/gnome-2.24.modules: Clutter Vala bindings have
	been branched for the 0.6 cycle.

2008-05-31  Baptiste Mille-Mathas  <baptiste.millemathias@gmail.com>

	* modulesets/gnome-suites-2.24.modules:
	Add dbus-glib as dependency for GConf (Closes #535857)

2008-05-31  Frederic Peters  <fpeters@0d.be>

	* jhbuild/config.py: put JHBuild path to manpages in MANPATH
	environment variable.  (closes: #535843)

2008-05-30  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/terminal.py, jhbuild/versioncontrol/hg.py,
	jhbuild/main.py: removed a few redundant "Error" labels.

2008-05-29  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-suites-2.24.modules: s/repo/revision in previous
	commit.

2008-05-29  Luca Ferretti  <elle.uca@libero.it>

	* modulesets/gnome-2.24.modules:
	Remove a lot of stuff in WebKit's autogenars, now they are defaults.
	The only non-defaults ones are --enable-video and use soup as http
	backend.
	
	Switch devhelp-webkit module to use devhelp/trunk on svn.gnome.org
	instead Alp's personal git repo (I think you have to remove your
	sandbox).
	
	* modulesets/gnome-suites-2.24.modules:
	Use gnome-2-22 branch for devhelp, 'cause trunk now only use WebKit.
	Devhelp will follow Epiphany policy. See bug #477971 for details.

2008-05-28  Frederic Peters  <fpeters@0d.be>
