@@ -1,5 +1,11 @@
 2008-06-04  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/frontends/terminal.py: removed occurence of locale.
+	getpreferredencoding() that fails on Mac OS X.
+	* jhbuild/main.py: added convenience uencode() function.
+
+2008-06-04  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/frontends/terminal.py: fixed print of unencoded characters to
 	console, when reporting conflicts after a checkout.
 
